<resources>
    <string name="app_name">SpotiQ</string>

    <!-- LOGIN -->
    <string name="spotify_account_name">Account name or email</string>
    <string name="spotify_account_password">Password</string>
    <string name="log_in">Connect to Spotify</string>

    <!--PATH-->
    <string name="path_pause">M 6,19 L 10,19 L 10,5 L 6,5 L 6,19 z M 14,19 L 18,19 L 18,5 L 14,5 L 14,19 z</string>
    <string name="path_play">M 5, 18.06 L 12,18.06 L 12,5.94 L 12,5.94 L 5,18.06 z M 12,18.06 L 19,18.06 L 12,5.94 L 12,5.94 L 12,18.06 z</string>

    <!-- GENERAL SHIT -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spotiq">SpotiQ</string>
    <string name="create_party">CREATE PARTY</string>
    <string name="create_party_lowercase">Create party</string>
    <string name="join_party">JOIN PARTY</string>
    <string name="join_party_lowercase">Join party</string>
    <string name="party_name_dialog">Give your party a name</string>
    <string name="party_name_hint">Name</string>
    <string name="party_password_hint">Password</string>
    <string name="cancel">Cancel</string>
    <string name="search_for_songs">Search for songs</string>
    <string name="error_fetching_songs">Error fetching songs</string>
    <string name="try_again">Try again</string>
    <string name="playlist_empty">The playlist is empty, add a song and get the party started!</string>
    <string name="empty_recyclerview_playlist_text">Ahem… So uhh… how about some music?</string>
    <string name="create_a_party">Create a party!</string>
    <string name="join_a_party">Join a party!</string>
    <string name="connect_spotify_premium_account">Connect to your Spotify Premium account!</string>
    <string name="invite_party_people">Invite party-people!</string>
    <string name="next_up">Next up</string>
    <string name="play_or_pause">Play! …or pause</string>
    <string name="spotiq_logo">SpotiQ logo</string>
    <string name="logo_transition_name">logoTransition</string>
    <string name="spotify_copyright_notice">Spotify ® and its registered trademarks are intellectual properties belonging to Spotify AB.
        \nSpotiQ has no relation to Spotify AB and its intellectual properties.</string>
    <string name="join_party_button_transition">join_party_button_transition</string>
    <string name="create_party_button_transition">create_party_button_transition</string>
    <string name="create_party_dialog_content">Create a party for others to join.\nYou\'re hosting, you control the music.</string>
    <string name="join_party_dialog_content">Join somebody else\'s party.\nYou\'re a guest, you add the music.</string>
    <string name="connect_to_spotify">Connect to</string>
    <string name="spotify_session_expired">Spotify session expired</string>
    <string name="ok">OK</string>
    <string name="spotify_session_expired_content">Your Spotify session has expired due to inactivity. To continue playing music, you need to refresh your session.</string>
    <string name="party_name_placeholder">PartyName</string>


    <!-- NotificationControlService -->
    <string name="menu_settings">Settings</string>

    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="notification_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="name">Name</string>
    <string name="choose_your_profile_picture">Choose your profile picture</string>
    <string name="dialog_setinformation_title">Create a profile</string>
    <string name="invite_friends">Invite friends</string>
    <string name="overflow_menu">Menu</string>
    <string name="add_music_from">Your playlists</string>
    <string name="add_music_from_below">Find inspiration in your own playlists</string>
    <string name="on_back_pressed_dialog_party_title">Are you sure?</string>
    <string name="on_back_pressed_dialog_party_content_host">Going back to the lobby will pause the music. Your party will still exist and you will still be the host.</string>
    <string name="on_back_pressed_dialog_party_content_guest">Are you sure you want to go back to the lobby?</string>
    <string name="yes">Yes</string>

    <!--ARRAYS-->
    <string-array name="search_for_suggestions">
        <item>…Justin Timberlake</item>
        <item>…Nirvana</item>
        <item>…Cult of Personality</item>
        <item>..The Less I Know The Better.</item>
        <item>…Sultans Of Swing</item>
        <item>…Flatbush Zombies</item>
        <item>…Kendrick Lamar</item>
        <item>…Nas - N.Y. State Of Mind</item>
        <item>…Coldplay</item>
        <item>…Hozier - Jackie And Wilson</item>
        <item>…The Strokes</item>
        <item>…Franz Ferdinand</item>
        <item>…Welcome To Paradise</item>
        <item>…Boston</item>
        <item>…Red Hot Chilli Peppers</item>
        <item>…MGMT - Kids</item>
        <item>…Etta James</item>
        <item>…Aretha Franklin</item>
        <item>…Miles Davis</item>
        <item>…Bombay Bicycle Club</item>
        <item>…Arctic Monkeys</item>
        <item>…Hurricane</item>
        <item>…All Along The Watchtower</item>
        <item>…Third Eye Blind</item>
        <item>…The Shins - New Slang</item>
        <item>…Quuens Of The Stone Age</item>
        <item>…Fugees</item>
        <item>…A Tribe Called Quest</item>
        <item>…Mos Def - Mathematics</item>
        <item>…The Roots - Dynamite!</item>
    </string-array>

</resources>
