<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/activity_login_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@color/colorPrimary">

    <ImageView
        android:src="@drawable/spotiq_logo"
        android:transitionName="@string/logo_transition_name"
        android:contentDescription="@string/spotiq_logo"
        android:layout_width="200dp"
        android:layout_height="112dp"
        android:id="@+id/spotiq_logo"
        android:layout_above="@+id/loginButtonView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"/>


    <RelativeLayout
        android:id="@+id/loginButtonView"
        android:foreground="?attr/selectableItemBackground"
        android:outlineProvider="bounds"
        android:longClickable="true"
        android:elevation="8dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.dd.processbutton.iml.ActionProcessButton
            custom:pb_colorNormal="#9ccc65"
            custom:pb_colorPressed="#8bc34a"
            custom:pb_colorProgress="#8bc34a"
            custom:pb_colorComplete="#aed581"
            custom:pb_textComplete="Connected!"
            custom:pb_textProgress="Connecting..."
            custom:pb_textError="Error connecting"
            custom:pb_colorError="#b71c1c"
            android:id="@+id/loginButton"
            android:foreground="?attr/selectableItemBackground"
            android:drawableEnd="@drawable/ic_spotify"
            android:drawablePadding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/connect_to_spotify"
            android:textColor="@color/materialWhite"
            android:textSize="24sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/copyright_notice"
            android:text="@string/spotify_copyright_notice"
            android:gravity="center"
            android:textColor="@color/materialWhite"
            android:textSize="10.1sp"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="14dp"/>

        <RelativeLayout
            android:layout_above="@id/copyright_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_alignParentStart="true"
                android:src="@drawable/create_party"
                android:transitionName="@string/create_party_button_transition"
                android:id="@+id/create_party_button"
                android:layout_width="0.1dp"
                android:layout_height="0.1dp"
                android:contentDescription="@string/create_a_party"/>

            <ImageView
                android:layout_alignParentEnd="true"
                android:src="@drawable/join_party"
                android:transitionName="@string/join_party_button_transition"
                android:id="@+id/join_party_button"
                android:layout_width="0.1dp"
                android:layout_height="0.1dp"
                android:contentDescription="@string/join_a_party"/>

        </RelativeLayout>



    </RelativeLayout>

</RelativeLayout>
